<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="20dp"
    android:layout_marginRight="31dp"
    android:layout_marginLeft="31dp"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/fan_header_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/vip_header_login_normal_fan_ll"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:id="@+id/vip_header_login_normal_fan_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="154"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/vip_header_login_normal_fan_text_tv"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fan_normal_fans_text"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/vip_header_login_crown_fan_ll"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:id="@+id/vip_header_login_crown_fan_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1086"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vip_header_login_crown_fan_text_tv"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fan_crown_fans_text"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/vip_header_login_shop_fan_ll"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:id="@+id/vip_header_login_shop_fan_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4263"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/vip_header_login_shop_fan_text_tv"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fan_shop_fans_text"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>