<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:visibility="gone"
        android:id="@+id/nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableRight="@drawable/triangle_icon_press"
        android:gravity="right"
        android:paddingRight="25dp"
        android:text="@string/vip_nearby_text"
        android:textColor="#ffb38f4f"
        android:textSize="14sp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_weight="1"
        android:drawableRight="@drawable/triangle_icon_normal"
        android:gravity="right"
        android:paddingRight="25dp"
        android:text="@string/vip_food_text"
        android:textColor="#333333"
        android:textSize="14sp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_weight="1"
        android:drawableRight="@drawable/triangle_icon_normal"
        android:gravity="right"
        android:paddingRight="25dp"
        android:text="@string/vip_distance_text"
        android:textColor="#333333"
        android:textSize="14sp" />



    <LinearLayout
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp">


        <LinearLayout
            android:id="@+id/ll_position_address"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/icon_lbs"
                />


            <TextView
                android:id="@+id/alliance_home_city_tv"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="#333"
                android:text="设置地址"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_unfold"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_positon_near"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_near"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="#333"
                android:text="全部"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:singleLine="true"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_unfold"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_industry_all"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_industry"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="#333"
                android:text="全部分类"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="8dp"
                android:singleLine="true"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_unfold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_discount"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_select"
                android:background="@drawable/choose_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="#333"
                android:text="只看优惠"
                android:layout_marginLeft="4dp"
                android:singleLine="true"
                android:layout_height="wrap_content" />



        </LinearLayout>


    </LinearLayout>









</LinearLayout>