<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fan_header_bg" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/vip_header_crown_income_bg"
            android:orientation="vertical">

            <LinearLayout

                android:layout_above="@+id/fan_header_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="29dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical">
                  <LinearLayout
                      android:gravity="center"
                      android:orientation="vertical"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
                      <TextView
                          android:gravity="center"
                          android:id="@+id/fan_header_view_normal_fan_tv"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="0"
                          android:textColor="@color/golden_fan_text_light_color"
                          android:textSize="16sp"
                          android:textStyle="bold" />
                      <TextView
                          android:gravity="center"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/fan_normal_fans_text"
                          android:textColor="#ffcecece"
                          android:textSize="12sp" />
                  </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/fan_header_view_crown_fan_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/golden_fan_text_light_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fan_crown_fans_text"
                        android:textColor="#ffcecece"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center|right"
                    android:orientation="vertical">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:gravity="center"
                            android:id="@+id/fan_header_view_shop_fan_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/golden_fan_text_light_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                        <TextView
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fan_shop_fans_text"
                            android:textColor="#ffcecece"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/fan_header_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_above="@+id/fan_header_view_total_tv"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="29dp"
                android:background="#4d568c" />

            <TextView
                android:gravity="bottom"
                android:id="@+id/fan_header_view_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="29dp"
                android:text="店铺粉丝总数：0人"
                android:textSize="14sp"
                android:textColor="@color/golden_fan_text_light_color" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_gravity="bottom"
            android:layout_marginBottom="113dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/white_round_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.gcssloop.widget.RCImageView
                android:layout_marginLeft="20dp"
                android:id="@+id/fan_header_referrer_avatar_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/iv_user_default_icon"
                app:round_as_circle="true" />

            <TextView
                android:layout_toRightOf="@+id/fan_header_referrer_avatar_iv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxWidth="122dp"
                android:id="@+id/fan_header_referrer_name_tv"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:text="@string/fan_referrer_text"
                android:textColor="@color/text_color" />

            <ImageView
                android:id="@+id/fan_header_referrer_recommend_iv"
                android:layout_marginLeft="11dp"
                android:layout_width="35dp"
                android:layout_toRightOf="@+id/fan_header_referrer_name_tv"
                android:src="@drawable/recommend_icon"
                android:layout_centerVertical="true"
                android:layout_height="13dp" />

            <ImageView
                android:layout_marginRight="20dp"
                android:layout_width="18dp"
                android:src="@drawable/phone_icon"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/fan_header_referrer_phone"
                android:layout_height="18dp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/fan_header_get_referrer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"
                android:text="点击获取"
                android:textColor="#FFC9B07A" />
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/vip_header_crown_border_bg" />


    </FrameLayout>
</FrameLayout>